--- a/build.gradle
+++ b/build.gradle
@@ -6,9 +6,7 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
-		maven { url "https://plugins.gradle.org/m2/"
-			url 'https://repo.spring.io/snapshot'
-		}
+		maven { url "https://plugins.gradle.org/m2/" }
 
 		jcenter()
 	}
