--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     # mode: HTML5
     prefix: classpath:/templates/
     suffix: .html
-    # template-resolver-order:
+    # template-resolver-orders:
     # view-names:
   datasource:
     driver-class-name: org.h2.Driver
