--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,11 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: create-drop
+     ddl-auto: create-drop
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
   thymeleaf:
     cache: false
     check-template: true
