--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>examples.boot</groupId>
+            <artifactId>serverinfo-spring-boot-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
